package org.example;

public class CupomDesconto10 extends DescontoPercentual {
    public CupomDesconto10() {

        super(new SemDesconto(), 0.10);
    }
}
