package org.example;

public class CupomDesconto15 extends DescontoPercentual {
    public CupomDesconto15() {

        super(new SemDesconto(), 0.15);
    }
}
