package org.example;

public class CupomDesconto20 extends DescontoPercentual {
    public CupomDesconto20() {

        super(new SemDesconto(), 0.20);
    }
}
