package org.example;

public interface Desconto {
    double aplicarDesconto(double valor);
}

