package org.example;

public interface FormaPagamento {
    String tipoPagamento();
    double getTaxa();
}
