@startuml
' Estados do Pedido (State + Singleton)
abstract class PedidoEstado
class PedidoEmProcesso
class PedidoEmPreparo
class PedidoEmTransporte
class PedidoEntregue
PedidoEmProcesso --|> PedidoEstado
PedidoEmPreparo --|> PedidoEstado
PedidoEmTransporte --|> PedidoEstado
PedidoEntregue --|> PedidoEstado

' Pedido
class Pedido {
    - processoAtual: PedidoEstado
    - usuario: Usuario
    - formaPagamento: FormaPagamento
    - valorTotal: double
    - desconto: Desconto
}
Pedido *-- PedidoEstado
Pedido --> Usuario
Pedido --> FormaPagamento
Pedido --> Desconto

' Usuario e Endereco (Builder e Prototype)
class Usuario {
    - nome: String
    - endereco: Endereco
}
Usuario --> Endereco

class Endereco

' Forma de Pagamento (Strategy)
interface FormaPagamento
class FormaCartaoCredito
class FormaCartaoDebito
class FormaPix
FormaCartaoCredito ..|> FormaPagamento
FormaCartaoDebito ..|> FormaPagamento
FormaPix ..|> FormaPagamento

' Desconto (Decorator + Factory)
interface Desconto
abstract class DescontoDecorator
class CupomDesconto10
class CupomDesconto15
class CupomDesconto20
class DescontoPercentual
class SemDesconto
DescontoDecorator ..|> Desconto
CupomDesconto10 ..|> Desconto
CupomDesconto15 ..|> Desconto
CupomDesconto20 ..|> Desconto
DescontoPercentual ..|> Desconto
SemDesconto ..|> Desconto

class DescontoFactory
DescontoFactory --> Desconto
DescontoFactory ..> TipoDesconto

' Enum para tipos de desconto
enum TipoDesconto

@enduml